// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message MonitoringAlphaMonitoredProject {
  string name = 1;
  string create_time = 2;
  string metrics_scope = 3;
}

message ApplyMonitoringAlphaMonitoredProjectRequest {
  MonitoringAlphaMonitoredProject resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteMonitoringAlphaMonitoredProjectRequest {
  string service_account_file = 1;
  MonitoringAlphaMonitoredProject resource = 2;
}

message ListMonitoringAlphaMonitoredProjectRequest {
  string service_account_file = 1;
  string MetricsScope = 2;
}

message ListMonitoringAlphaMonitoredProjectResponse {
  repeated MonitoringAlphaMonitoredProject items = 1;
}

service MonitoringAlphaMonitoredProjectService {
  rpc ApplyMonitoringAlphaMonitoredProject(ApplyMonitoringAlphaMonitoredProjectRequest) returns (MonitoringAlphaMonitoredProject);
  rpc DeleteMonitoringAlphaMonitoredProject(DeleteMonitoringAlphaMonitoredProjectRequest) returns (google.protobuf.Empty);
  rpc ListMonitoringAlphaMonitoredProject(ListMonitoringAlphaMonitoredProjectRequest) returns (ListMonitoringAlphaMonitoredProjectResponse);
}
